--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.richard-ballard</groupId>
-    <artifactId>arbee-abstract-types</artifactId>
+    <artifactId>arbee-core-types</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>Arbee abstract types</name>
-    <description>A collection of abstract types that I find useful across various projects</description>
-    <url>https://github.com/Richard-Ballard/arbee-abstract-types</url>
+    <name>Arbee core types</name>
+    <description>A collection of core data types and structures that I find useful across various projects</description>
+    <url>https://github.com/Richard-Ballard/arbee-core-types</url>
 
     <licenses>
         <license>
@@ -21,8 +21,8 @@
     </licenses>
 
     <scm>
-        <connection>scm:git:git://github.com/Richard-Ballard/arbee-abstract-types.git</connection>
-        <url>https://github.com/Richard-Ballard/arbee-abstract-types/tree/master</url>
+        <connection>scm:git:git://github.com/Richard-Ballard/arbee-core-types.git</connection>
+        <url>https://github.com/Richard-Ballard/arbee-core-types/tree/master</url>
     </scm>
 
     <developers>
